[package]
name = "initiative_manager"
version = "1.2.2"
edition = "2021"

[dependencies.iced]
version = "0.3.0"
default-features = false
# for release
features = ["glow"]
# for debug
#features = ["glow", "debug"]

[dependencies.iced_aw]
git = "https://github.com/iced-rs/iced_aw"
branch = "main"
default-features = false
features = ["tabs", "colors", "icons"]

[dependencies]
iced_native = "0.4.0"
iced_futures = { version = "0.3.0", features = ["tokio"] }
anyhow = "1.0.38"
itertools = "0.10.3"
rand = "0.8.4"
roman = "0.1.6"
regex = "1.5.4"
reqwest = "0.11.9"
self_update = "0.28.0"
semver = "1.0.4"
tempfile = "3.3.0"
tokio = { version = "1.15.0", features = ["time"] }
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
dirs = "4.0.0"
once_cell = "1.9.0"